# gtest-example

./: .gitignore  CMakeLists.txt  README.md
libraries/foo/: CMakeLists.txt  foo.cpp  foo.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/libraries/testfoo/: CMakeLists.txt  FooTest.cpp
